# build-a-haskell-web-framework

./: README.md
demo/: LICENSE  demo.cabal
demo/app/: Main.hs
demo/src/: App.hs  Handler.hs  Route.hs
docs/: SLIDES.md  index.html
resources/: web-framework.graffle
