name:                demo
version:             0.1.0
synopsis:            Code from live-coding during talk (not polished)
description:         Please see README.md
homepage:            https://github.com/cbaatz/build-a-haskell-web-framework#readme
license:             BSD3
license-file:        LICENSE
author:              Carl Baatz
maintainer:          carl.baatz@gmail.com
copyright:           2016 Carl Baatz
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     App
                     , Route
                     , Handler
  build-depends:       base >= 4.7 && < 5
                     , basic-prelude
                     , wai
                     , http-types
                     , attoparsec
                     , bytestring
                     , mtl
  default-language:    Haskell2010

executable demo-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , demo
                     , warp
  default-language:    Haskell2010

test-suite demo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , demo
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cbaatz/build-a-haskell-web-framework
